# friendly_idle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ae.bat  implementation.md  requirements.txt  setup.cfg  upgrade_all.bat
friendly_idle/: __init__.py  __main__.py  future_work.py  idle_formatter.py  idle_gettext.py  main.py  make_pot.bat  patch_idle.py  patching_hook.py
friendly_idle/locales/fr/LC_MESSAGES/: friendly_idle.po
