[metadata]
name = friendly_idle
version = attr: friendly_idle.__version__
description = Customized version of IDLE for friendly/friendly-traceback.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Education
    Topic :: Education
    Topic :: Software Development :: Interpreters
url = https://github.com/friendly-traceback/friendly_idle
author = Andre Roberge
author_email = Andre.Roberge@gmail.com

[options]
packages = find:
python_requires = >=3.8.10
install_requires =
    friendly >= 0.7.19
    friendly_traceback >= 0.7.47

[options.packages.find]
exclude =
    dist
    build

[options.entry_points]
console_scripts =
    friendly_idle = friendly_idle.__main__:main
    friendly-idle = friendly_idle.__main__:main
